<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="driver_modes_t" Id="{cc04c85c-25ac-4ba2-a290-a93442c8d518}">
    <Declaration><![CDATA[TYPE driver_modes_t :
(
	NI	:=	0,  // Not initiated
	CSP	:=	8,	// Cyclic synchronous position mode
	PP	:=	1,	// Profile position mode
	CSV	:=	9,	// Cyclic synchronous velocity mode
	PV	:=	3,	// Profile velocity mode
	HM	:=	6	// Homing mode
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>